fix bg and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1086,7 +1086,7 @@ License URI:http://www.gnu.org/licenses/gpl-2.0.html
 	}
 	
 	#fun-acts{
-		background:#333 url(../images/bgd/image3.jpg) top center no-repeat;
+		background:#000 url(../images/bgd/image3.jpg) center center no-repeat;
         width:100%;
         height:auto;
 	}
